[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-cli"
version = "1.2.2"
description = "A daily LeetCode workflow CLI: fetch, test, submit, and a NeetCode roadmap."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []  # standard library only

[project.scripts]
leetcode = "leetcode_cli.cli:main"

[tool.setuptools]
packages = ["leetcode_cli"]

[tool.setuptools.package-data]
leetcode_cli = ["neetcode_roadmap.json", "icon.png", "icon.ico"]
