[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-assistant"
version = "1.8.0"
description = "Leetcode Assistant: fetch, solve in-app, test, submit, with a NeetCode roadmap and complexity checks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []  # standard library only

[project.scripts]
leetcode = "leetcode_assistant.cli:main"

[tool.setuptools]
packages = ["leetcode_assistant"]

[tool.setuptools.package-data]
leetcode_assistant = ["neetcode_roadmap.json", "icon.png", "icon.ico"]
